scripts/slurm_outputs_scripts/set_1_50_22_9279932.log
22
  File "train_hotswapped.py", line 203
    context_images_2 = torch.zeros((context_images_2.shape)).to(device)z
                                                                       ^
SyntaxError: invalid syntax
